# BigData-assignment2

./: .gitignore  README.md  github_link.txt  pyproject.toml  run.sh
data_models/: ecommerce_ver0.hck.json  ecommerce_ver2.hck.json  ecommerce_ver3.hck.json  mongo_ecommerce.hck.json  mongo_ecommerce_ver1.hck.json  neo4J_ecommerce.hck.json  psql_ecommerce.hck.json
notebooks/: clean_data.ipynb  data_retrieval.ipynb  eda.ipynb
scripts/: clean_data.py  load_data_mongodb.js  load_data_psql.sql
scripts/analysis/: config.ini  data_analysis.py  q1.cypher  q1.js  q1.sql  q2.cypher  q2.js  q2.sql  q3.cypher  q3.js  q3.sql
scripts/loading/: load_data_mongodb.bat  load_data_mongodb.js  load_data_neo4j.bat  load_data_neo4j.cypher  load_data_psql.sql  run.sh
scripts/psql/ver1/: clean_data.py  load_data_psql.sql
