[project]
name = "bigdata-assignment2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "neo4j>=5.28.1",
    "notebook>=7.3.2",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "psutil>=7.0.0",
    "psycopg2>=2.9.10",
    "pymongo>=4.11.2",
    "tabulate>=0.9.0",
]
